# Nautilus-Ops-Integrated

./: .dockerignore  .gitignore  .ruff.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TODO_TRACKING.md  data.json  docker-compose.prod.yml  docker-compose.yml  endpoint.json  main.py  mihomo-config.yaml.template  pyproject.toml
.github/workflows/: auto-merge.yml  ci.yml  docker-build.yml  pr-checks.yml  test-coverage.yml
.omc/: notepad.md  project-memory.json
.omc/autopilot/: optimization-summary.md
.omc/sessions/: a3a61db7-2d4f-495e-b909-05f1599a1482.json  e054262a-db1a-4dd9-8fda-e82756a6183e.json
.omc/state/: agent-replay-a3a61db7-2d4f-495e-b909-05f1599a1482.jsonl  hud-state.json  hud-stdin-cache.json  last-tool-error.json  subagent-tracking.json
backtest/: engine_high.py  engine_low.py  exceptions.py  tui_manager.py
cli/: commands.py
config/: active.yaml
config/environments/: base.yaml  binance_sandbox.yaml  dev.yaml  dev_4y.yaml  dev_4y_baseline.yaml  dev_4y_optimized.yaml  funding_arb.yaml  funding_test.yaml  prod.yaml  sandbox.yaml
config/strategies/: kalman_pairs.yaml  keltner_rs_breakout_baseline.yaml  oi_divergence.yaml  rs_squeeze.yaml  spot_futures_arbitrage.yaml
core/: adapter.py  exceptions.py  schemas.py
docker/: AUTO_DEPLOY_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_WORKFLOW.md  OPTIMIZATION.md  QUICK_REFERENCE.sh  README.md  auto-deploy.sh  entrypoint-auto.sh  quick-deploy.sh
docs/: DEPLOYMENT_CHECKLIST.md  FUNDING_ARBITRAGE_BACKTEST_ANALYSIS.md  FUNDING_ARBITRAGE_COMPLETION.md  FUNDING_ARBITRAGE_DATA_PREP.md  FUNDING_ARBITRAGE_OPTIMIZATION.md  FUNDING_ARBITRAGE_PAIRS.md  NETWORK_DIAGNOSIS.md  STRATEGY_REVIEW.md  SYNC_GUIDE.md  fix-issue-4-multi-instrument-alignment.md  issue-4-fix-summary.md
docs/archive/: project_analysis.md
docs/optimization/: P0_critical_issues.md  P0_fixes_evaluation_2026-02-03.md  comprehensive_optimization_report_2026-02-01.md  optimization_analysis_2026-02-01.md  optimization_summary_2026-02-03.md
examples/: performance_analysis_example.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_09321f02cbd42eba_llm_service_py.html  z_09321f02cbd42eba_strategy_repository_py.html  z_1ea838694151cac8_constants_py.html  z_241ee8dc02c6c148___init___py.html  z_241ee8dc02c6c148_dual_thrust_py.html  z_241ee8dc02c6c148_funding_arbitrage_py.html  z_241ee8dc02c6c148_spot_futures_arbitrage_py.html  z_2bcc951c7ba6d427___init___py.html  z_2bcc951c7ba6d427_metrics_py.html  z_2bcc951c7ba6d427_tracing_py.html  z_2d92da268a799a28_claude_client_py.html  z_2d92da268a799a28_prompt_templates_py.html  z_33da57c6ee43fad0___init___py.html  z_33da57c6ee43fad0_dual_thrust_py.html  z_33da57c6ee43fad0_keltner_channel_py.html  z_33da57c6ee43fad0_market_regime_py.html  z_33da57c6ee43fad0_relative_strength_py.html  z_39ad2404e901a42c_engine_py.html  z_429002e790b7afc7___init___py.html  z_429002e790b7afc7_analyzer_py.html  z_429002e790b7afc7_metrics_py.html  z_429002e790b7afc7_report_py.html  z_434c77fc11d56e0c___init___py.html  z_434c77fc11d56e0c_commands_py.html  z_43a8b29f3f235841___init___py.html  z_43a8b29f3f235841_data_cache_py.html  z_43a8b29f3f235841_data_fetcher_py.html  z_43a8b29f3f235841_data_limits_py.html  z_43a8b29f3f235841_data_loader_py.html  z_43a8b29f3f235841_data_manager_py.html  z_43a8b29f3f235841_data_retrieval_py.html  z_43a8b29f3f235841_data_validator_py.html  z_57760688d1f824db___init___py.html  z_57760688d1f824db_adapter_py.html  z_57760688d1f824db_config_validator_py.html  z_57760688d1f824db_exceptions_py.html  (+58 more)
langgraph/.omc/: TODO.md
langgraph/.omc/state/: agent-replay-a3a61db7-2d4f-495e-b909-05f1599a1482.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  subagent-tracking.json
langgraph/domain/models/: strategy.py
langgraph/infrastructure/agents/: optimizer.py
langgraph/infrastructure/cache/: llm_cache.py
langgraph/infrastructure/code_gen/: strategy_generator.py
langgraph/infrastructure/graph/: optimize_graph.py
live/: engine.py
nautilus_practice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
public-repo/: CLAUDE.md  TODO_TRACKING.md  main.py
public-repo/config/: active.yaml
public-repo/core/: schemas.py
public-repo/docker/: PUBLISH_GUIDE.md  QUICK_START.md  entrypoint-auto.sh  entrypoint.sh  entrypoint.sh.backup  publish-image.sh  remote-deploy.sh
public-repo/docs/: FUNDING_ARBITRAGE_SUMMARY.md
public-repo/docs/archive/: README.md
public-repo/langgraph/application/: __init__.py
public-repo/langgraph/shared/: config.py
public-repo/langgraph/tests/: test_llm_cache.py
public-repo/public-repo/: .dockerignore  .env.example  AGENTS.md  CLAUDE.md  Dockerfile  README.md
public-repo/public-repo/backtest/: funding_data_client.py
public-repo/public-repo/config/: constants.py
public-repo/sandbox/: engine.py
public-repo/scripts/: download_parallel.py  run_funding_arbitrage_analysis.py  test_compare_fix.py  test_direct_publish.py
public-repo/strategy/: funding_arbitrage.py  spot_futures_arbitrage.py
public-repo/tests/: test_adapter.py  test_basis_calculator.py  test_common_components.py  test_delta_manager.py  test_dual_thrust.py  test_symbol_normalization.py
public-repo/utils/: oi_funding_adapter.py
sandbox/: engine.py
scripts/: analyze_basis_distribution.py  batch_backtest.py  check_deployment.sh  config_cli.py  generate_comparison.py  generate_universe.py  sync_to_public.sh
strategy/: __init__.py  funding_arbitrage.py  keltner_rs_breakout_refactored.py
strategy/archived/: kalman_pairs.py
strategy/core/: base.py  dependency_checker.py
tests/: test_adapter_restore_equivalence.py  test_dynamic_risk.py  test_network.py  test_oi_funding_adapter.py  test_path_helpers.py  test_spot_futures_arbitrage.py  test_symbol_parser.py  test_time_helpers.py
utils/: instrument_helpers.py  instrument_loader.py  oi_funding_adapter.py  symbol_parser.py  universe.py
utils/data_management/: data_limits.py  data_loader.py  data_manager.py  data_retrieval.py  data_validator.py
(+287 files in other folders)
