[project]
name = "nautilus-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12, <3.13"

dependencies = [
    "ccxt>=4.5.28",
    "httpx>=0.27.0",
    "joblib>=1.5.3",
    "jupyterlab>=4.5.1",
    "lightgbm>=4.6.0",
    "nautilus-trader",
    "pandas-stubs~=2.3.3",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "ruff>=0.15.0",
    "scikit-learn>=1.8.0",
    "ta>=0.11.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "strategy*", "utils*", "backtest*", "live*", "cli*", "config*", "data*"]

[tool.uv]
# 必须保留，允许安装 alpha/dev 版本
prerelease = "allow"

[[tool.uv.index]]
name = "nautilus"
url = "https://packages.nautechsystems.io/simple"

[tool.uv.sources]
nautilus-trader = { index = "nautilus" }

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "examples/",
    "sandbox/",
    "scripts/",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "E402", "N803", "N805", "N806", "I001"]
per-file-ignores = { "tests/**" = ["F401"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=.",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=json",
    "--cov-fail-under=55",
]

[tool.coverage.run]
source = ["."]
relative_files = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/site-packages/*",
    "setup.py",
    "*/sandbox/*",
    "*/scripts/*",
    "*/examples/*",
    "main.py",
    "*/profiling/*",
    "utils/api_health_check.py",
    "cli/file_cleanup.py",
    "live/engine.py",
    "strategy/keltner_rs_breakout_refactored.py",
    "strategy/dual_thrust_refactored.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "output/htmlcov"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# 第三方库缺少类型提示时忽略
[[tool.mypy.overrides]]
module = [
    "nautilus_trader.*",
    "ccxt.*",
    "ta.*",
    "joblib.*",
    "lightgbm.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.0",
]
