[project]
name = "nautilus-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12, <3.13"

dependencies = [
    "ccxt>=4.5.28",
    "joblib>=1.5.3",
    "jupyterlab>=4.5.1",
    "lightgbm>=4.6.0",
    "nautilus-trader",
    "pandas-stubs~=2.3.3",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "ruff>=0.15.0",
    "scikit-learn>=1.8.0",
    "ta>=0.11.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "strategy*", "utils*", "backtest*", "live*", "cli*", "config*", "data*"]

[tool.uv]
# 必须保留，允许安装 alpha/dev 版本
prerelease = "allow"

[[tool.uv.index]]
name = "nautilus"
url = "https://packages.nautechsystems.io/simple"

[tool.uv.sources]
nautilus-trader = { index = "nautilus" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "E402", "N803", "N805", "N806", "I001"]
per-file-ignores = { "tests/**" = ["F401"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=.",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=json",
    "--cov-fail-under=70",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/site-packages/*",
    "setup.py",
    "*/sandbox/*",
    "*/scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
